# TODO(#1532): Rename file to 'BUILD' post-Gradle.
"""
This library provides data to the rest of the application.
"""

load("//defs:oppia_android_library.bzl", "oppia_android_assets_library")

# Visibility for data tests.
package_group(
    name = "data_testing_visibility",
    packages = [
        "//data",
        "//data/src/test/...",
    ],
)

oppia_android_assets_library(
    name = "test_assets",
    testonly = True,
    assets = glob(["src/test/assets/**"]),
    assets_dir = "src/test/assets/",
    visibility = [":data_testing_visibility"],
)
