# TODO(#1532): Rename file to 'BUILD' post-Gradle.
"""
This library contains the frontend controller and business service logic for the application.
"""

load("//defs:oppia_android_library.bzl", "oppia_android_assets_library")
load("//domain:domain_assets.bzl", "generate_assets_list_from_text_protos")

package_group(
    name = "domain_prod_visibility",
    includes = [":domain_testing_visibility"],
    packages = ["//domain/src/main/..."],
)

package_group(
    name = "domain_testing_visibility",
    packages = ["//domain/src/test/..."],
)

DOMAIN_ASSETS = generate_assets_list_from_text_protos(
    name = "domain_assets",
    exploration_file_names = [
        "test_exp_id_2",
        "13",
        "test_exp_id_4",
        "test_exp_id_5",
        "umPkwp0L1M0-",
        "MjZzEVOG47_1",
        "2mzzFVDLuAj8",
        "5NWuolNcwH6e",
        "k2bQ7z5XHNbK",
        "tIoSb3HZFN6e",
        "test_single_interactive_state_exp_no_hints_no_solution",
        "test_single_interactive_state_exp_with_hints_and_solution",
        "test_single_interactive_state_exp_with_one_hint_and_solution",
        "test_single_interactive_state_exp_with_one_hint_and_no_solution",
        "test_single_interactive_state_exp_with_only_solution",
        "test_single_interactive_state_exp_with_solution_missing_answer",
        "test_checkpointing_base_exploration",
        "test_checkpointing_exploration_missing_first_state",
        "test_checkpointing_exploration_multiple_compatible_updates",
        "test_checkpointing_exploration_multiple_updates_one_incompatible",
        "test_checkpointing_exploration_new_title",
        "test_checkpointing_exploration_new_version",
        "test_checkpointing_exploration_updated_first_state_compat_rule_spec",
        "test_checkpointing_exploration_updated_first_state_correctness_label",
        "test_checkpointing_exploration_updated_first_state_destination",
        "test_checkpointing_exploration_updated_first_state_feedback_html",
        "test_checkpointing_exploration_updated_first_state_feedback_id",
        "test_checkpointing_exploration_updated_first_state_incompat_rule_spec",
        "test_checkpointing_exploration_updated_first_state_interaction",
        "test_checkpointing_exploration_updated_first_state_new_correct_answer",
        "test_checkpointing_exploration_updated_first_state_updated_hints",
        "test_checkpointing_exploration_updated_second_state_removed",
    ],
    skills_file_names = [
        "skills",
    ],
    story_file_names = [
        "test_story_id_0",
        "test_story_id_2",
        "wANbh4oOClga",
        "wAMdg4oOClga",
        "xBSdg4oOClga",
    ],
    subtopic_file_names = [
        "GJ2rLXRKD5hw_1",
        "GJ2rLXRKD5hw_2",
        "GJ2rLXRKD5hw_3",
        "GJ2rLXRKD5hw_4",
        "omzF4oqgeTXd_1",
        "test_topic_id_0_1",
    ],
    topic_file_names = [
        "test_topic_id_0",
        "test_topic_id_1",
        "test_topic_id_2",
        "GJ2rLXRKD5hw",
        "omzF4oqgeTXd",
    ],
    topic_list_file_names = [
        "topics",
    ],
)

oppia_android_assets_library(
    name = "assets",
    assets = glob(
        ["src/main/assets/**"],
        exclude = ["src/main/assets/**/*.textproto"],
    ) + DOMAIN_ASSETS,
    assets_dir = "src/main/assets/",
    visibility = [
        "//:oppia_binary_visibility",
        "//:oppia_e2e_testing_visibility",
        "//:oppia_testing_visibility",
    ],
)
