"""
This library contains all android_binary and android_instrumentation_test targets to each
test suite in instrumentation module as a oppia_instrumentation_test wrapper.
Note that:
 - All the oppia_instrumentation_test targets are named similar to the respective class name
 of the test suite.
"""

exports_files(["src/javatests/AndroidManifest.xml"])

# Used for end-to-end tests
android_binary(
    name = "oppia_test",
    testonly = True,
    custom_package = "org.oppia.android",
    enable_data_binding = True,
    manifest = "//instrumentation:src/java/AndroidManifest.xml",
    manifest_values = {
        "applicationId": "org.oppia.android",
        "minSdkVersion": "19",
        "targetSdkVersion": "30",
        "versionCode": "0",
        "versionName": "0.1-test",
    },
    multidex = "native",
    visibility = ["//:oppia_e2e_testing_visibility"],
    deps = [
        "//app",
        "//instrumentation/src/java/org/oppia/android/instrumentation/application:oppia_test_application",
    ],
)
