"""
This library contains all android_binary and android_instrumentation_test targets to each
test suite in instrumentation module as a oppia_instrumentation_test wrapper.
Note that:
 - All the oppia_instrumentation_test targets are named similar to the respective class name
 of the test suite.
"""

exports_files(["src/javatests/AndroidManifest.xml"])

# Used for end-to-end tests
android_binary(
    name = "oppia_test",
    testonly = True,
    custom_package = "org.oppia.android",
    manifest = "//instrumentation:src/java/AndroidManifest.xml",
    manifest_values = {
        "applicationId": "org.oppia.android",
        "minSdkVersion": "19",
        "targetSdkVersion": "31",
        "versionCode": "0",
        "versionName": "0.1-test",
    },
    multidex = "native",
    visibility = ["//:oppia_e2e_testing_visibility"],
    deps = [
        "//app:crashlytics_deps",
        "//app:resources",
        "//app/src/main/java/org/oppia/android/app/databinding:databinding_resources",
        "//config/src/java/org/oppia/android/config:all_languages_config",
        "//domain:assets",
        "//instrumentation/src/java/org/oppia/android/instrumentation/application:oppia_test_application",
        "//third_party:androidx_databinding_databinding-common",
        "//third_party:androidx_databinding_databinding-runtime",
        "//third_party:androidx_work_work-runtime",
        "//third_party:javax_annotation_javax_annotation-api",
        "//utility:resources",
        "//utility/src/main/java/org/oppia/android/util/parser/image:repository_glide_module",
    ],
)
